--- a/MeetupEventWinners/MeetupEventWinners/MeetupEventWinners.csproj
+++ b/MeetupEventWinners/MeetupEventWinners/MeetupEventWinners.csproj
@@ -49,11 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\EventDetails.cs" />
+    <Compile Include="JsonModels\EventDetails.cs" />
+    <Compile Include="JsonModels\EventResultDetails.cs" />
+    <Compile Include="JsonModels\GroupDetail.cs" />
     <Compile Include="Model\MeetupEvent.cs" />
     <Compile Include="Model\MeetupSettings.cs" />
-    <Compile Include="Model\Member.cs" />
-    <Compile Include="Model\Participant.cs" />
+    <Compile Include="JsonModels\Member.cs" />
+    <Compile Include="JsonModels\Participant.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
